Add SPA routing support for client-side routes

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "source": "/api/:path*",
             "destination": "https://your-backend-api-url.com/api/:path*"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
