--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vitejs/plugin-react": "^4.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet-async": "^2.0.5",
         "react-router-dom": "^6.20.0",
-        "@vitejs/plugin-react": "^4.2.0",
         "vite": "^5.0.0"
     },
     "devDependencies": {
