--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,32 @@
 {
-    "buildCommand": "node node_modules/vite/bin/vite.js build",
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://api.jobfresh.in/api/:path*"
+            "destination": "https://jobfresh.onrender.com/api/:path*"
         },
         {
-            "source": "/(.*)",
+            "source": "/((?!sitemap\\.xml|robots\\.txt).*)",
             "destination": "/index.html"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/sitemap.xml",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "application/xml"
+                }
+            ]
+        },
+        {
+            "source": "/robots.txt",
+            "headers": [
+                {
+                    "key": "Content-Type",
+                    "value": "text/plain"
+                }
+            ]
         }
     ]
 }
