--- a/vercel.json
+++ b/vercel.json
@@ -1,32 +1,13 @@
 {
+    "buildCommand": "node node_modules/vite/bin/vite.js build",
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "https://jobfresh.onrender.com/api/:path*"
+            "destination": "https://api.jobfresh.in/api/:path*"
         },
         {
-            "source": "/((?!sitemap\\.xml|robots\\.txt).*)",
+            "source": "/(.*)",
             "destination": "/index.html"
-        }
-    ],
-    "headers": [
-        {
-            "source": "/sitemap.xml",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "application/xml"
-                }
-            ]
-        },
-        {
-            "source": "/robots.txt",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "text/plain"
-                }
-            ]
         }
     ]
 }
